chore: Optimize code and update ui version